--- a/src/main/resources/org/example/some/menu.fxml
+++ b/src/main/resources/org/example/some/menu.fxml
@@ -9,9 +9,9 @@
    <children>
       <ImageView fitHeight="707.0" fitWidth="1351.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../images/backGrounds/start.png" />
+            <Image url="@../../../images/StartGame.png" />
          </image>
       </ImageView>
-      <Button fx:id="beginButton" layoutX="528.0" layoutY="518.0" mnemonicParsing="false" onAction="#onAction" prefHeight="77.0" prefWidth="260.0" stylesheets="@../../../styles/info.css" text="Start" textFill="WHITE" />
+      <Button fx:id="beginButton" layoutX="506.0" layoutY="547.0" mnemonicParsing="false" onAction="#onAction" prefHeight="77.0" prefWidth="260.0" stylesheets="@../../../styles/info.css" text="Start" textFill="WHITE" />
    </children>
 </AnchorPane>
