--- a/src/main/resources/org/example/some/thirdLevel.fxml
+++ b/src/main/resources/org/example/some/thirdLevel.fxml
@@ -14,12 +14,11 @@
             <Image url="@../../../images/backGrounds/magicBack.png" />
         </image>
     </ImageView>
-    <ImageView fitHeight="34.0" fitWidth="72.0" layoutX="24.0" layoutY="654.0" onMouseClicked="#backToMainMenu" pickOnBounds="true" preserveRatio="true">
+    <ImageView fitHeight="43.0" fitWidth="74.0" layoutX="24.0" layoutY="654.0" onMouseClicked="#backToMainMenu" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../../../images/homeUnactive.png" />
         </image>
     </ImageView>
-      <Button layoutX="39.0" layoutY="658.0" mnemonicParsing="false" text="Button" />
     <ImageView id="coinsImage" fitHeight="43.0" fitWidth="127.0" layoutX="206.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
         <image>
             <Image url="@../../../images/coins.png" />
@@ -86,7 +85,7 @@
         </image>
     </ImageView>
     <Button fx:id="shopButton" layoutX="1052.0" layoutY="649.0" mnemonicParsing="false" onAction="#enterShop" prefHeight="43.0" prefWidth="162.0" stylesheets="@../../../styles/firstLevel.css" />
-
+    <Button id="homeButton" fx:id="homeButton" layoutX="24.0" layoutY="653.0" mnemonicParsing="false" onAction="#backToMainMenu" prefHeight="39.0" prefWidth="74.0" stylesheets="@../../../styles/firstLevel.css" />
 </children>
 
 </AnchorPane>
