delete buttons for nextLevels

--- a/src/main/resources/org/example/some/firstLevel.fxml
+++ b/src/main/resources/org/example/some/firstLevel.fxml
@@ -71,7 +71,7 @@
             <Image url="@../../../images/homeUnactive.png" />
          </image>
       </ImageView>
-  <Button layoutX="1174.0" layoutY="406.0" mnemonicParsing="false" onAction="#nextLevel" text="2nd" />
+  <!--<Button layoutX="1174.0" layoutY="406.0" mnemonicParsing="false" onAction="#nextLevel" text="2nd" />-->
 
 
    </children>
