style and activate endButton

--- a/src/main/resources/styles/info.css
+++ b/src/main/resources/styles/info.css
@@ -1,5 +1,6 @@
 #beginButton,
-#startButton {
+#startButton,
+#beginAgain {
     -fx-background-color: #C84938;
     -fx-text-fill: white;
     -fx-font-size: 20;
