--- a/src/main/resources/org/example/some/theEnd.fxml
+++ b/src/main/resources/org/example/some/theEnd.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="707.0" prefWidth="1255.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.some.TheEnd">
    <children>
@@ -13,6 +13,9 @@
             <Image url="@../../../images/finish.png" />
          </image>
       </ImageView>
-      <Button fx:id="endButton" layoutX="485.0" layoutY="265.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="118.0" text="The End" />
+      <Button id="beginAgain" fx:id="endButton" layoutX="474.0" layoutY="265.0" mnemonicParsing="false" onAction="#beginAgain" prefHeight="54.0" prefWidth="157.0" stylesheets="@../../../styles/info.css" text="Restart">
+         <font>
+            <Font size="3.0" />
+         </font></Button>
    </children>
 </AnchorPane>
